--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,7 +67,7 @@
           <li><a href="http://android-holo-colors.com/">Android Holo Colors Generator</a> by Jérôme Van Der Linden</li>
       </div>
       <div id="footer">
-        <p>See the <a href="https://github.com/romannurik/AndroidAssetStudio">source on GitHub</a>.</p>
+        <p>Based on the Android Asset Studio by Roman Nurik. See the original source<a href="https://github.com/romannurik/AndroidAssetStudio">here</a>.</p>
       </div>
     </div>
   </body>
