Basic Css Changes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -63,13 +63,13 @@
 
         <h2 id="group-community">Community tools <span>&mdash; Similar tools from the open source community</span></h2>
         <ul>
-        <li><a href="http://romannurik.github.io/AndroidAssetStudio/nine-patches.html">Simple nine-patch generator</a></li>
+        <li><a href="http://romannurik.github.io/AndroidAssetStudio/nine-patches.html">Simple nine-patch generator</a> by Roman Nurik </li>
           <li><a href="http://developer.android.com/distribute/tools/promote/device-art.html">Official Android Device Art Generator</a></li>
           <li><a href="http://jgilfelt.github.com/android-actionbarstylegenerator/">Android Action Bar Style Generator</a> by Jeff Gilfelt</li>
           <li><a href="http://android-holo-colors.com/">Android Holo Colors Generator</a> by Jérôme Van Der Linden</li>
       </div>
       <div id="footer">
-        <p>Based on the Android Asset Studio by Roman Nurik. See the original source<a href="https://github.com/romannurik/AndroidAssetStudio"> here</a>.</p>
+        <p>Based on the Android Asset Studio by Roman Nurik. See the original source <a href="https://github.com/romannurik/AndroidAssetStudio">here</a>.</p>
       </div>
     </div>
   </body>
