--- a/src/html/icons-generic.html
+++ b/src/html/icons-generic.html
@@ -195,9 +195,9 @@
           new studio.forms.ColorField('color', {
             title: 'Color',
             helpText: 'Flat foreground color (optional).',
-            defaultValue: '#33b5e5',
+            defaultValue: '#000',
             alpha: true,
-            defaultAlpha: 100
+            defaultAlpha: 54
           }),
           (nameField = new studio.forms.TextField('name', {
             title: 'Name',
