--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,7 +42,7 @@
         <h1>Android Asset Studio for Material Design</h1>
       </div>
       <div id="page-links">
-        <h2 id="group-icon-generators">Icon generators <span>&mdash; Make icons for your app</span></h2>
+        <h2 id="group-icon-generators">Icon generators <br><span>&mdash; Make icons for your app</span></h2>
         <p>
           Icon generators allow you to quickly and easily generate icons
           from existing source images, clipart, or text.
@@ -61,7 +61,7 @@
           <li><a href="http://developer.android.com/distribute/tools/promote/device-art.html">Official Android Device Art Generator</a></li>
         </ul>-->
 
-        <h2 id="group-community">Community tools <span>&mdash; Similar tools from the open source community</span></h2>
+        <h2 id="group-community">Community tools <br><span>&mdash; Similar tools from the open source community</span></h2>
         <ul>
         <li><a href="http://romannurik.github.io/AndroidAssetStudio/nine-patches.html">Simple nine-patch generator</a> by Roman Nurik </li>
           <li><a href="http://developer.android.com/distribute/tools/promote/device-art.html">Official Android Device Art Generator</a></li>
