--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,7 +48,7 @@
           from existing source images, clipart, or text.
         </p>
         <ul>
-          <!--<li><a href="icons-launcher.html">Launcher icons</a></li>-->
+          <li><a href="icons-launcher.html">Launcher icons</a></li>
           <li><a href="icons-actionbar.html">Action bar and tab icons</a></li>
           <li><a href="icons-notification.html">Notification icons</a></li>
           <!--<li><a href="icons-nav-drawer-indicator.html">Navigation drawer indicator</a></li>-->
