--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           <li><a href="icons-generic.html">Generic icons</a></li>
         </ul>
 
-        <!--<h2 id="group-misc">Other generators <span>&mdash; Miscellaneous asset creation tools</span></h2>
+        <h2 id="group-misc">Other generators <span>&mdash; Miscellaneous asset creation tools</span></h2>
         <ul>
           <li><a href="nine-patches.html">Simple nine-patch generator</a></li>
           <li><a href="http://developer.android.com/distribute/tools/promote/device-art.html">Official Android Device Art Generator</a></li>
-        </ul>-->
+        </ul>
 
         <h2 id="group-community">Community tools</h2>
         <ul>
